syntax = "proto3";
option java_package="pb";
/*
Control Plane's RPC handler protocols,
include:
1. TM registry
2. Routing table RPC (state service)
3. ...?
 */

message RegisterTMRequest {
    string name = 1;
    string address = 2;
    int32 port = 3;
}

message RegisterTMResponse {
    string status = 1;
}

message DeregisterTMRequest {
    string name = 1;
}

message DeregisterTMResponse {
    string status = 1;
}

// allow TMs to register at CP
service CPService {
    rpc RegisterTM(RegisterTMRequest) returns (RegisterTMResponse);
    rpc DeregisterTM(DeregisterTMRequest) returns (DeregisterTMResponse);
}
